--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "file-loader": "^0.8.5",
     "node-sass": "^3.5.3",
     "postcss-loader": "^0.8.2",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-router": "^2.3.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
